[tool.poetry]
name = "merge-backups"
version = "0.1.0"
description = ""
authors = ["Mike Volk <michaelvolk1979@gmail.com>"]
readme = "README.md"
packages = [{include = "merge_backups"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
ipython = "^8.12.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
